# RustKeylogger

./: Cargo.toml  LICENSE  README.md  startup.sh  text.txt
express_http_server/: package-lock.json  server.js
logs/: 127.0.0.1_ws.txt
python_ws_server/: client.py  server.py
src/: main.rs
