[package]
name = "rustkeyinput"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inputbot = { git = "https://github.com/obv-mikhail/InputBot", branch = "develop" }
# opencv = "0.63"
futures = "0.1"
tokio = "0.1"
tungstenite = "0.17.2"
url = "2.1.0"

[dev-dependencies]
env_logger = "0.9.0"